--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -6,6 +6,7 @@
 
 <section>
   <form action="/contato" method="post">
+    <input type="hidden" name="_csrf" value="<%- _csrf %>">
     <input type="text" name="contato[nome]" placeholder="Nome">
     <input type="text" name="contato[email]" placeholder="E-mail">
     <button type="submit" class="btn btn-primary">Cadastrar</button>
