--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -6,6 +6,7 @@
 
 <section>
   <form action="/entrar" method="post">
+    <input type="hidden" name="_csrf" value="<%- _csrf %>">
     <input type="text" name="usuario[nome]" placeholder="Nome">
     <br>
 
